--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/3D-Blog-Website/" # the subpath of your site, e.g. /blog/
+baseurl: "/3D-Blog-Website" # the subpath of your site, e.g. /blog/
 url: "http://tech-savvy-squad.github.io/3D-Blog-Website/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
